2009-04-04  higepon  <higepon@users.sourceforge.jp>

        * Fixed VM.cpp:310: warning: 'ret.scheme::Object::val' may be used uninitialized in this function.

        * gc-7.1 : Disabled Threads. On Ubuntu 8.10 amd64 with DLINUX_THREADS=1,s gctest crash.

2009-04-03  higepon  <higepon@users.sourceforge.jp>

        * README-WINDOWS.txt: Added.

2009-04-02  higepon  <higepon@users.sourceforge.jp>

        * Scanner.cpp: Fixed the bug "'get-datum' and 'read' are greedy with their input"
                       pointed out by Will.Donnelly.
          http://code.google.com/p/mosh-scheme/issues/detail?id=51

        * test/input-port.scm: Added tests for greedy bug.

2009-04-01  higepon  <higepon@users.sourceforge.jp>

        * TextualInputPort.cpp (TextualInputPort::lookaheadChar): don't unGetChar(Eof).

2009-03-30  higepon  <higepon@users.sourceforge.jp>

        * configure.ac/Makefile.am : Mingw patch by .mjt.

        * Fixed the bug of transcoded-port and external representation of port by Will.Donnelly.

        * lib/mosh/test.ss (test-external-rep): Added.

2009-03-29  higepon  <higepon@users.sourceforge.jp>

        * Fasl.cpp : Improved Fasl write/read of Record & RTD.

2009-03-28  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/test2.ss (mosh): Trying new test system.

2009-03-26  higepon  <higepon@users.sourceforge.jp>

        * Added (srfi :64 testing)

        * lib/srfi/%3a64.sls: Now porting.

2009-03-25  higepon  <higepon@users.sourceforge.jp>

        * test-data.scm : Modified some tests.

        * test/test.bat: Addex execute of R6RS test suite.

        * Removed type "word" and use "intptr_t" instead.

        * UtilityProcedures.cpp: Patch for Mingw by .mjt.

        * Bignum.h : Fixed add, sub and mul.

2009-03-24  higepon  <higepon@users.sourceforge.jp>

        * test/test.bat: Added for tests on Windows.

        * Added O_BINARY flag for open (_WIN32 only).
