@@ -1,5 +1,5 @@
 all:
-	MOSH_GENSYM_PREFIX=P mosh psyntax-buildscript-mosh.ss
+	MOSH_GENSYM_PREFIX=`mosh print-prefix.ss` mosh psyntax-buildscript-mosh.ss
 # rescue mode
 #	~/mosh/mosh -5 psyntax10.scm psyntax-buildscript-mosh.ss
 
